ansible/manifests/oauth-callback-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contentiq-oauth-callback-proxy
  labels:
    app: contentiq-oauth-callback-proxy
spec:
  selector:
    app: contentiq-oauth-callback-proxy
  ports:
    - name: http
      port: 8080
      targetPort: http
